--- a/.github/workflows/release-core.yml
+++ b/.github/workflows/release-core.yml
@@ -1,19 +1,18 @@
 on:
   schedule:
-    - cron: '29 8 * * 1'
+    - cron: '29 8 * * *'
   workflow_dispatch:
 
 name: release-core
 jobs:
   release-please:
     env:
-      ENABLE_AUTO_APPROVE: ${{ secrets.ENABLE_AUTO_APPROVE }}
       ENABLE_RELEASE_PLEASE: ${{ secrets.ENABLE_RELEASE_PLEASE }}
     runs-on: ubuntu-latest
     steps:
       - name: ReleasePlease
         id: release-please
-        if: ${{ env.ENABLE_RELEASE_PLEASE }}
+        if: ${{ env.ENABLE_RELEASE_PLEASE || github.event_name == 'workflow_dispatch' }}
         uses: GoogleCloudPlatform/release-please-action@v2
         with:
           command: release-pr
@@ -25,34 +24,17 @@ jobs:
           version-file: lib/google/apis/core/version.rb
           monorepo-tags: true
           bump-minor-pre-major: true
-      - name: AutoApprove
-        id: auto-approve
+      - name: ReleaseLabel
+        id: release-label
         if: ${{ steps.release-please.outputs.pr }}
         uses: actions/github-script@v2
         with:
           github-token: ${{secrets.YOSHI_APPROVER_TOKEN}}
           script: |
-            if (process.env.ENABLE_AUTO_APPROVE) {
-              core.info("ENABLE_AUTO_APPROVE is set; labeling and approving");
-              github.pulls.createReview({
-                owner: 'googleapis',
-                repo: 'google-api-ruby-client',
-                body: "AutoApprove: Rubber stamped release!",
-                pull_number: ${{ steps.release-please.outputs.pr }},
-                event: "APPROVE"
-              });
-              github.issues.addLabels({
-                owner: 'googleapis',
-                repo: 'google-api-ruby-client',
-                issue_number: ${{ steps.release-please.outputs.pr }},
-                labels: ["autorelease: pending", "automerge", "kokoro:force-run"]
-              });
-            } else {
-              core.info("ENABLE_AUTO_APPROVE is not set; labeling release only");
-              github.issues.addLabels({
-                owner: 'googleapis',
-                repo: 'google-api-ruby-client',
-                issue_number: ${{ steps.release-please.outputs.pr }},
-                labels: ["autorelease: pending", "kokoro:force-run"]
-              });
-            }
+            core.info("Labeling release");
+            github.issues.addLabels({
+              owner: 'googleapis',
+              repo: 'google-api-ruby-client',
+              issue_number: ${{ steps.release-please.outputs.pr }},
+              labels: ["autorelease: pending", "kokoro:force-run"]
+            });
