feat: add opentelemetry instrumentation

--- a/google-apis-core/Gemfile
+++ b/google-apis-core/Gemfile
@@ -20,6 +20,7 @@ group :development do
   gem 'redis', '~> 3.2'
   gem 'logging', '~> 2.2'
   gem 'opencensus', '~> 0.4'
+  gem 'opentelemetry-sdk', '~> 0.15.0'
   gem 'httparty'
 end
 
