--- a/.kokoro/release/common.cfg
+++ b/.kokoro/release/common.cfg
@@ -17,28 +17,6 @@ before_action {
   }
 }
 
-# Fetch magictoken to use with Magic Github Proxy 
-before_action {
-  fetch_keystore {
-    keystore_resource {
-      keystore_config_id: 73713
-      keyname: "releasetool-magictoken"
-      backend_type: FASTCONFIGPUSH
-    }
-  }
-}
-
-# Fetch api key to use with Magic Github Proxy 
-before_action {
-  fetch_keystore {
-    keystore_resource {
-      keystore_config_id: 73713
-      keyname: "magic-github-proxy-api-key"
-      backend_type: FASTCONFIGPUSH
-    }
-  }
-}
-
 before_action {
   fetch_keystore {
     keystore_resource {
@@ -55,35 +33,20 @@ gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/google-cloud-ruby"
 gfile_resources: "/bigstore/cloud-devrel-kokoro-resources/trampoline"
 
 # Use the trampoline script to run in docker.
-build_file: "google-api-ruby-client/.kokoro/trampoline.sh"
+build_file: "google-api-ruby-client/.kokoro/trampoline_v2.sh"
 
 # Configure the docker image for kokoro-trampoline.
 env_vars: {
-    key: "TRAMPOLINE_IMAGE"
-    value: "gcr.io/cloud-devrel-kokoro-resources/yoshi-ruby/release"
+  key: "TRAMPOLINE_IMAGE"
+  value: "gcr.io/cloud-devrel-kokoro-resources/yoshi-ruby/release"
 }
 
 env_vars: {
-    key: "TRAMPOLINE_BUILD_FILE"
-    value: "github/google-api-ruby-client/.kokoro/build.sh"
+  key: "TRAMPOLINE_BUILD_FILE"
+  value: ".kokoro/release.sh"
 }
 
 env_vars: {
-    key: "TRAMPOLINE_SCRIPT"
-    value: "trampoline_v1.py"
-}
-
-env_vars: {
-    key: "JOB_TYPE"
-    value: "release"
-}
-
-env_vars: {
-    key: "OS"
-    value: "linux"
-}
-
-env_vars: {
-    key: "REPO_DIR"
-    value: "github/google-api-ruby-client"
+  key: "SECRET_MANAGER_KEYS"
+  value: "releasetool-publish-reporter-app,releasetool-publish-reporter-googleapis-installation,releasetool-publish-reporter-pem"
 }
