--- a/.trampolinerc
+++ b/.trampolinerc
@@ -18,7 +18,7 @@ required_envvars+=(
 
 # Add env vars which are passed down into the container here.
 pass_down_envvars+=(
-    "AUTORELEASE_PR" "RELEASE_DRY_RUN"
+    "AUTORELEASE_PR" "RELEASE_DRY_RUN" "PACKAGE"
 )
 
 # Prevent unintentional override on the default image.
